# app/Http/Controllers/API/AnimeMerchController.php
@@ -27,13 +27,108 @@ class AnimeMerchController extends Controller
      *         response=200,
      *         description="successful",
      *         @OA\JsonContent()
-     *     )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_page",
+     *         in="query",
+     *         description="current page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=1
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_limit",
+     *         in="query",
+     *         description="max item in a page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=10
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_search",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_Producer",
+     *         in="query",
+     *         description="search by Producer like name",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_sort_by",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="latest"
+     *         )
+     *     ),
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        $merch = AnimeMerch::all();
-        return response()->json(array('message'=>'Data retrieved successfully', 'data'=>$merch), 200);
+        try {
+            $data['filter']         = $request->all();
+            $page                   = @$data['filter']['_page'] ? intval($data['filter']['_page']) : 1;
+            $limit                  = @$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000;
+            $offset                 = ($page-1)*$limit;
+            $data['products']       = AnimeMerch::whereRaw('1 = 1');
+
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(nama_item) LIKE "%'.strtolower($request->get('_search')).'%" OR LOWER(Producer) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+            if($request->get('_Producer')){
+                $data['products'] = $data['products']->whereRaw('LOWER(Producer) = "'.strtolower($request->get('_Producer')).'"');
+            }
+            if($request->get('_sort_by')){
+            switch ($request->get('_sort_by')) {
+                default:
+                case 'latest_tahun_rilis':
+                    $data['products'] = $data['products']->orderBy('tahun_rilis','DESC');
+                    break;
+                case 'latest_added':
+                    $data['products'] = $data['products']->orderBy('created_at','DESC');
+                    break;
+                case 'nama_item_asc':
+                    $data['products'] = $data['products']->orderBy('nama_item','ASC');
+                    break;
+                case 'nama_item_desc':
+                    $data['products'] = $data['products']->orderBy('nama_item','DESC');
+                    break;
+                case 'harga_asc':
+                    $data['products'] = $data['products']->orderBy('harga','ASC');
+                    break;
+                case 'harga_desc':
+                    $data['products'] = $data['products']->orderBy('harga','DESC');
+                    break;
+            }
+            }
+            $data['products_count_total'] = $data['products']->count();
+            $data['products']             = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
+            // $data['products_raw_sql']  = $data['products']->toSql();
+            $data['products']             = $data['products']->get();
+            $data['products_count_start']= ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+            $data['products_count_end']  = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+            return response()->json($data, 200);
+
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+        }
     }
 
     /**
@@ -66,10 +161,10 @@ class AnimeMerchController extends Controller
     public function store(Request $request)
     {
         try {
-
-            $validator = Validator::make($request->all(), [
+            $data = $request->json()->all();
+            $validator = Validator::make($data, [
                 'nama_item'  => 'required|unique:anime_merch',
-                'producer'   => 'nullable|max:100',
+                'Producer'   => 'nullable|max:100',
                 'harga'      => 'nullable|numeric',
             ]);
             if ($validator->fails()) {
@@ -77,6 +172,7 @@ class AnimeMerchController extends Controller
             }
             $merch = new AnimeMerch();
             $merch->fill($request->all())->save();
+            $merch->created_by = \Auth::user()->id; //store user ID
             return response()->json(array('message'=>'Saved successfully', 'data'=>$merch), 200);
         } catch (\Exception $exception) {
             throw new HttpException(400, "Invalid data - {$exception->getMessage()}");
@@ -176,6 +272,7 @@ class AnimeMerchController extends Controller
 
         try {
             $merch->fill($request->all())->save();
+            $merch->updated_by = \Auth::user()->id; //set user ID on update
             return response()->json(array('message'=>'Updated successfully', 'data'=>$merch), 200);
         } catch (\Exception $exception) {
             throw new HttpException(400, "Invalid data - {$exception->getMessage()}");
@@ -219,6 +316,7 @@ class AnimeMerchController extends Controller
     public function destroy($id)
     {
         $merch = AnimeMerch::findOrFail($id);
+        $merch->deleted_by = \Auth::user()->id; // Track who deleted the record
         $merch->delete();
 
         return response()->json(array('message'=>'Deleted successfully', 'data'=>$merch), 204);
